[workspace]
members = ["axum", "axum-*", "examples/*"]
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["axum", "axum-*"]
# Example has been deleted, but README.md remains
exclude = ["examples/async-graphql"]
resolver = "2"

[patch.crates-io]
hyper = { git = "https://github.com/hyperium/hyper", rev = "cf68ea902749e" }
hyper-util = { git = "https://github.com/hyperium/hyper-util", rev = "64f896695c0f1" }
