[package]
categories = ["development-tools::debugging"]
description = "Better error messages for axum framework."
edition = "2018"
homepage = "https://github.com/tokio-rs/axum"
keywords = ["axum", "debugging", "debug"]
license = "MIT"
name = "axum-debug"
readme = "README.md"
repository = "https://github.com/tokio-rs/axum"
version = "0.3.2"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
axum = { path = "../axum", version = "0.4" }
trybuild = "1.0"
rustversion = "1.0"
