[package]
name = "axum-method-router"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "An easier to use method router for axum"
edition = "2018"
homepage = "https://github.com/tokio-rs/axum"
keywords = ["http", "web", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/axum"

[dependencies]
axum = { version = "0.3.2", path = "../axum" }
http-body = "0.4.4"
pin-project-lite = "0.2"
tower = { version = "0.4.10", default-features = false, features = ["util"] }
tower-service = "0.3"

[dev-dependencies]
hyper = "0.14"
tokio = { version = "1.13", features = ["rt", "macros"] }
