[package]
name = "axum-openapi-macros"
version = "0.1.0"
edition = "2021"
authors = ["Austin Bonander <austin@launchbadge.com>"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.91", features = ["full"] }
quote = "1.0.18"
proc-macro2 = "1.0.37"