[package]
name = "axum-openapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { path = "../axum", version = "0.4" }
okapi = "0.7.0-rc.1"
schemars = "0.8.8"
mime = "0.3.16"

serde_json = "1.0"

[dev-dependencies]
assert-json-diff = "2.0"
serde = { version = "1.0", features = ["derive"] }
