[package]
name = "axum-serve"
version = "0.1.0"
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
description = "Serve axum (and other tower-based) services with hyper"
edition = "2021"
rust-version = { workspace = true }
homepage = "https://github.com/tokio-rs/axum"
keywords = ["http", "web", "server"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/axum"

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    # our crates
    "axum_core::*",
    # not 1.0
    "futures_core::*",
    "futures_util::*",
    "tower_service::*",
    # >=1.0
    "http::*",
    "http_body::*",
    "tokio::*",
]

[features]
default = []
http1 = ["dep:hyper", "hyper?/http1", "hyper-util?/http1"]
http2 = ["dep:hyper", "hyper?/http2", "hyper-util?/http2"]
tokio = [
    "dep:hyper-util",
    "dep:axum-core",
    "dep:futures-core",
    "dep:futures-util",
    "dep:http",
    "dep:http-body",
    "dep:tower",
    "dep:tower-service",
    "tokio/rt",
    "tokio/macros",
]
tracing = ["dep:tracing"]

[dependencies]
# required unconditionally: `Listener`/`ListenerExt`/`ConnLimiter` need these
# regardless of which features are enabled.
pin-project-lite = "0.2.7"

# only needed by the `serve`/`Executor`/hyper-integration machinery, which is
# gated behind the `tokio` feature (paired with `http1`/`http2`). Kept optional
# so that a `Listener`-only consumer (e.g. a custom TLS listener) doesn't pull
# in axum-core/tower/http machinery just to implement the trait.
axum-core = { path = "../axum-core", version = "0.5.6", optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
http = { version = "1.0.0", optional = true }
http-body = { version = "1.0.0", optional = true }
hyper = { version = "1.4.0", optional = true }
hyper-util = { version = "0.1.4", features = ["tokio", "server", "service"], optional = true }
tower = { version = "0.5.2", default-features = false, features = ["util"], optional = true }
tower-service = { version = "0.3", optional = true }
tracing = { version = "0.1", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { package = "tokio", version = "1.44", features = ["io-util", "time", "net", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { package = "tokio", version = "1.44", features = ["io-util", "time", "sync"] }

[dev-dependencies]
axum = { path = "../axum", features = ["__private", "http2"] }
bytes = "1.7"
http-body-util = "0.1.0"
hyper = { version = "1.4.0", features = ["client"] }
tokio = { package = "tokio", version = "1.44", features = ["macros", "rt", "rt-multi-thread", "net", "test-util"] }
tower = { version = "0.5.2", features = ["util", "make"] }

[lints]
workspace = true
